--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Autonomous Landmine Detection System</title>
+    <title>IntelliMine-Autonomous Landmine Detection System</title>
     <meta name="description" content="Real-time GPR-based landmine detection system with AI-powered threat assessment and field mapping" />
     <meta name="author" content="Landmine Detection Team" />
 
