Added Website logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_8_Z6qF6be1utDP-UsTZzKn2mH-Ewb-5_5pZNDea7kEo6uukAqRtkoosoOII-9oUsA_M&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IntelliMine-Autonomous Landmine Detection System</title>
     <meta name="description" content="Real-time GPR-based landmine detection system with AI-powered threat assessment and field mapping" />
@@ -10,6 +11,8 @@
     <meta property="og:title" content="Autonomous Landmine Detection System" />
     <meta property="og:description" content="Real-time GPR-based landmine detection system with AI-powered threat assessment and field mapping" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.intellimine-detection.com" />
+    
   </head>
 
   <body>
